Lazy but tested CSS tweak for Special:ChallengeView/<challenge ID> for skins with a narrow(er), fixed-width content area
Has no visually distinguishable effect on remotely sensible skins but makes the special page look a tad bit better on skins like Dusk or Dusk to Dawn now that the line above "Challenge Status" text no longer overflows into the sidebar or whatnot.

--- a/resources/css/ext.challenge.view.css
+++ b/resources/css/ext.challenge.view.css
@@ -51,5 +51,5 @@ a.challenge-admin-cancel-link {
 .challenge-line {
 	border-bottom: 1px solid #ccc;
 	margin-bottom: 15px;
-	width: 800px;
+	max-width: 800px;
 }
